Added initial code. Includes dataset loading and preprocessing

--- a/03-conv-neural-nets/conv-nn.ipynb
+++ b/03-conv-neural-nets/conv-nn.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "outputs": [],
    "source": [
     "import torch\n",
