Everything just before self-attention

--- a/Transformers/NanoGPT.ipynb
+++ b/Transformers/NanoGPT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPh0bqWAAwKxErZjWsPkgCp",
+      "authorship_tag": "ABX9TyPWWpvyJ7g6w00ugwHx3DeQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,29 +28,29 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tR6Ulcx11El1",
-        "outputId": "766aa9d1-3cb7-4176-b774-0affd56d26ed"
+        "outputId": "0ee5889e-ae77-4a24-cae3-6c8cd8e82fa9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-02-03 12:01:18--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "--2024-02-17 16:25:03--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
             "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
             "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
             "Saving to: ‘input.txt’\n",
             "\n",
-            "\rinput.txt             0%[                    ]       0  --.-KB/s               \rinput.txt           100%[===================>]   1.06M  --.-KB/s    in 0.01s   \n",
+            "\rinput.txt             0%[                    ]       0  --.-KB/s               \rinput.txt           100%[===================>]   1.06M  --.-KB/s    in 0.03s   \n",
             "\n",
-            "2024-02-03 12:01:18 (110 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
+            "2024-02-17 16:25:04 (34.2 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -69,9 +69,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ibgzPzw93oRr",
-        "outputId": "54ddb97e-f029-40bb-99dc-d1e27706ed51"
+        "outputId": "64e3626e-f211-449c-f4d2-3b9911e4c33b"
       },
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -102,7 +102,7 @@
       "metadata": {
         "id": "PQvhE4cI2CsB"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -117,9 +117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gQc7XW0i2cyl",
-        "outputId": "07d7a329-a6a1-42c4-80be-17e027e66e27"
+        "outputId": "c26b6cd8-478a-42ca-b7e6-1615cab8881f"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -143,7 +143,7 @@
       "metadata": {
         "id": "m9VzeU0O2ub9"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -157,9 +157,9 @@
           "height": 35
         },
         "id": "a-FYZyec4ogM",
-        "outputId": "da0fb9cf-6935-42eb-dedf-c78b2ee238f5"
+        "outputId": "b7a2e146-5b06-4195-c65b-1e897e1ef099"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -172,7 +172,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 16
+          "execution_count": 6
         }
       ]
     },
@@ -189,9 +189,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Wb6r8QbZ4pl5",
-        "outputId": "54f80e84-a822-4d32-a5dd-cae56b82c4f3"
+        "outputId": "1d5f4ba3-a662-476e-81d4-a19d8feb706a"
       },
-      "execution_count": null,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -212,7 +212,7 @@
       "metadata": {
         "id": "hMpyFz_w5UWI"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -277,9 +277,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SD5j3XKx7HpO",
-        "outputId": "6c188d85-cc12-421b-a398-6de18a6c2842"
+        "outputId": "6dcbef8d-4b21-40db-f1c2-ffb64074214f"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -303,10 +303,185 @@
     {
       "cell_type": "code",
       "source": [
-        "class"
+        "import torch\n",
+        "import torch.nn as nn\n",
+        "import torch.nn.functional as F\n",
+        "torch.manual_seed(1337)\n",
+        "\n",
+        "\n",
+        "class BigramLanguageModel(nn.Module):\n",
+        "\n",
+        "    def __init__(self, vocab_size):\n",
+        "        super(BigramLanguageModel, self).__init__()\n",
+        "        self.embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+        "\n",
+        "    def forward(self, idx, targets=None):\n",
+        "        logits = self.embedding_table(idx)\n",
+        "\n",
+        "        if targets is None:\n",
+        "            loss = None\n",
+        "        else:\n",
+        "\n",
+        "            # In the Embedding layer, the table is of the shape Batch, Time, Channels\n",
+        "            # In our case, B=4, T=8, C=vocab_size=65\n",
+        "            B, T, C = logits.shape\n",
+        "\n",
+        "            logits = logits.view(B*T, C)\n",
+        "            targets = targets.view(B*T)\n",
+        "\n",
+        "            loss = F.cross_entropy(logits, targets)\n",
+        "\n",
+        "\n",
+        "        return logits, loss\n",
+        "\n",
+        "    def generate(self, idx, max_new_tokens):\n",
+        "\n",
+        "        # idx is (B, T)\n",
+        "        for _ in range(max_new_tokens):\n",
+        "            logits, loss = self(idx) # (B*T, C)\n",
+        "            # only take the last timestep data\n",
+        "            logits = logits[:, -1, :] # becomes (B, C)\n",
+        "            probs = F.softmax(logits, dim=1)\n",
+        "            idx_next = torch.multinomial(probs, num_samples=1) # (B, 1)\n",
+        "            idx = torch.cat((idx, idx_next), dim=1) # (B, T+1)\n",
+        "\n",
+        "        return idx\n",
+        "\n",
+        "vocab_size = len(chars)\n",
+        "m = BigramLanguageModel(vocab_size)\n",
+        "logits, loss = m(xb, yb)\n",
+        "print(logits.shape)"
       ],
       "metadata": {
-        "id": "e5j4foiVAQ7-"
+        "id": "e5j4foiVAQ7-",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7487ab8e-0608-483d-ada0-4150b37a7f2d"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "torch.Size([32, 65])\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "idx = torch.zeros((1, 1), dtype=torch.long)\n",
+        "print(decode(m.generate(idx, max_new_tokens=100)[0].tolist()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "r_ACi-Da6A6Y",
+        "outputId": "6faf957d-3707-47ae-a05a-b19167f72ea3"
+      },
+      "execution_count": 19,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "pdcbf?pGXepydZJSrF$Jrqt!:wwWSzPNxbjPiD&Q!a;yNt$Kr$o-gC$WSjJqfBKBySKtSKpwNNfyl&w:q-jluBatD$Lj;?yzyUca\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "optimizer = torch.optim.AdamW(m.parameters(), lr=1e-3)"
+      ],
+      "metadata": {
+        "id": "OyAr_8ScA5X9"
+      },
+      "execution_count": 20,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "batch_size = 32\n",
+        "for steps in range(10000):\n",
+        "\n",
+        "    xb, yb = get_batch('train')\n",
+        "\n",
+        "    logits, loss = m(xb, yb)\n",
+        "    optimizer.zero_grad(set_to_none=True)\n",
+        "    loss.backward()\n",
+        "    optimizer.step()\n",
+        "\n",
+        "print(loss.item())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "K_BJUEGEDs_a",
+        "outputId": "06561564-be38-4282-a93f-8f96a1c3172f"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2.5067548751831055\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(decode(m.generate(idx, max_new_tokens=300)[0].tolist()))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "EAjH4sFaD-TI",
+        "outputId": "3c967eb0-616a-44ab-9f8a-8ca61c10f3f6"
+      },
+      "execution_count": 26,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "\n",
+            "S:\n",
+            "Ad?\n",
+            "Se withind wee ut my had:\n",
+            "ce houeftle quese\n",
+            "F&imat--\n",
+            "Vavou allitouroo-kenged f y aikit,\n",
+            "being'lanered nt.\n",
+            "ORORYee torys, vy, it D:\n",
+            "A wo lllgsthige an, u,\n",
+            "Y incllince bary d t s at m t e, lomy mand itha s ily har,\n",
+            "QYCo otother brt hech J;\n",
+            "Dougeatin t looungoberevy Y avelmithe buch w,\n",
+            "\n",
+            "M\n",
+            "Fothou\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "QTE-Y_zIG8el"
       },
       "execution_count": null,
       "outputs": []
