Its working now? Probably some runtime issue, starting a new runtime fixed it entirely. Maybe some vars were set previously, who knows?

--- a/Transformers/Decoder.ipynb
+++ b/Transformers/Decoder.ipynb
@@ -40,7 +40,7 @@
       "metadata": {
         "id": "KajLTPH7wuEl"
       },
-      "execution_count": 14,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -64,50 +64,50 @@
       ],
       "metadata": {
         "id": "Ng29najzwiQ9",
-        "outputId": "e690fde2-521e-4e0d-803e-a45582cae03b",
+        "outputId": "a378ad46-fa02-4eea-8276-bb1b0974494a",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 15,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<torch._C.Generator at 0x785bab7a58d0>"
+              "<torch._C.Generator at 0x7f317b7b95f0>"
             ]
           },
           "metadata": {},
-          "execution_count": 15
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 3,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "tR6Ulcx11El1",
-        "outputId": "a3c03c21-7dc5-4088-86d1-de57c44e1b99"
+        "outputId": "f839f1b8-c8ce-4ca1-efb4-fc41791b290a"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "--2024-02-18 11:40:15--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
-            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.110.133, 185.199.108.133, 185.199.111.133, ...\n",
-            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.110.133|:443... connected.\n",
+            "--2024-02-26 08:36:00--  https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt\n",
+            "Resolving raw.githubusercontent.com (raw.githubusercontent.com)... 185.199.108.133, 185.199.109.133, 185.199.110.133, ...\n",
+            "Connecting to raw.githubusercontent.com (raw.githubusercontent.com)|185.199.108.133|:443... connected.\n",
             "HTTP request sent, awaiting response... 200 OK\n",
             "Length: 1115394 (1.1M) [text/plain]\n",
-            "Saving to: ‘input.txt.13’\n",
+            "Saving to: ‘input.txt’\n",
             "\n",
-            "\rinput.txt.13          0%[                    ]       0  --.-KB/s               \rinput.txt.13        100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
+            "\rinput.txt             0%[                    ]       0  --.-KB/s               \rinput.txt           100%[===================>]   1.06M  --.-KB/s    in 0.05s   \n",
             "\n",
-            "2024-02-18 11:40:15 (22.2 MB/s) - ‘input.txt.13’ saved [1115394/1115394]\n",
+            "2024-02-26 08:36:00 (19.8 MB/s) - ‘input.txt’ saved [1115394/1115394]\n",
             "\n"
           ]
         }
@@ -125,7 +125,7 @@
       "metadata": {
         "id": "PQvhE4cI2CsB"
       },
-      "execution_count": 17,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -141,9 +141,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "gQc7XW0i2cyl",
-        "outputId": "e5e49361-029c-4a46-a6e1-54f603ec91b0"
+        "outputId": "ce5b7c2a-9e30-4582-de6f-ff78bfe66362"
       },
-      "execution_count": 18,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -167,7 +167,7 @@
       "metadata": {
         "id": "m9VzeU0O2ub9"
       },
-      "execution_count": 19,
+      "execution_count": 6,
       "outputs": []
     },
     {
@@ -182,7 +182,7 @@
       "metadata": {
         "id": "hMpyFz_w5UWI"
       },
-      "execution_count": 20,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -250,7 +250,7 @@
       "metadata": {
         "id": "SD5j3XKx7HpO"
       },
-      "execution_count": 21,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -290,7 +290,7 @@
       "metadata": {
         "id": "QTE-Y_zIG8el"
       },
-      "execution_count": 22,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -312,7 +312,7 @@
       "metadata": {
         "id": "5DRInxyLxeIs"
       },
-      "execution_count": 23,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -337,7 +337,7 @@
       "metadata": {
         "id": "Mgr_r5Pozi4-"
       },
-      "execution_count": 24,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -363,7 +363,7 @@
       "metadata": {
         "id": "f8W5Oav3w3EU"
       },
-      "execution_count": 25,
+      "execution_count": 12,
       "outputs": []
     },
     {
@@ -419,7 +419,7 @@
       "metadata": {
         "id": "eTWsdEza0gQP"
       },
-      "execution_count": 26,
+      "execution_count": 13,
       "outputs": []
     },
     {
@@ -447,44 +447,44 @@
       ],
       "metadata": {
         "id": "zGsQc7M213rs",
-        "outputId": "f8a7390f-6ea3-4a4b-f1bc-2b9703afc029",
+        "outputId": "bc66a87f-87cb-483f-b909-c85f68bedcb7",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 27,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "0.210497 M parameters\n",
-            "step 0: train loss 4.3090, val loss 4.3112\n",
-            "step 100: train loss 2.6446, val loss 2.6524\n",
-            "step 200: train loss 2.2733, val loss 2.2724\n",
-            "step 300: train loss 1.6392, val loss 1.6524\n",
-            "step 400: train loss 0.9465, val loss 0.9770\n",
-            "step 500: train loss 0.5368, val loss 0.5856\n",
-            "step 600: train loss 0.3680, val loss 0.4092\n",
-            "step 700: train loss 0.2774, val loss 0.3049\n",
-            "step 800: train loss 0.2189, val loss 0.2487\n",
-            "step 900: train loss 0.1868, val loss 0.2246\n",
-            "step 1000: train loss 0.1605, val loss 0.1813\n",
-            "step 1100: train loss 0.1338, val loss 0.1570\n",
-            "step 1200: train loss 0.1272, val loss 0.1423\n",
-            "step 1300: train loss 0.1166, val loss 0.1315\n",
-            "step 1400: train loss 0.1130, val loss 0.1250\n",
-            "step 1500: train loss 0.1013, val loss 0.1150\n",
-            "step 1600: train loss 0.1102, val loss 0.1201\n",
-            "step 1700: train loss 0.1347, val loss 0.1461\n",
-            "step 1800: train loss 0.0989, val loss 0.1085\n",
-            "step 1900: train loss 0.1024, val loss 0.1128\n",
-            "step 2000: train loss 0.1022, val loss 0.1137\n",
-            "step 2100: train loss 0.1054, val loss 0.1094\n",
-            "step 2200: train loss 0.0908, val loss 0.0987\n",
-            "step 2300: train loss 0.0906, val loss 0.0945\n",
-            "step 2400: train loss 0.1007, val loss 0.1090\n",
-            "step 2499: train loss 0.0864, val loss 0.0911\n"
+            "step 0: train loss 4.3172, val loss 4.3193\n",
+            "step 100: train loss 2.6664, val loss 2.6741\n",
+            "step 200: train loss 2.5124, val loss 2.5080\n",
+            "step 300: train loss 2.4255, val loss 2.4227\n",
+            "step 400: train loss 2.3517, val loss 2.3600\n",
+            "step 500: train loss 2.3010, val loss 2.3139\n",
+            "step 600: train loss 2.2526, val loss 2.2659\n",
+            "step 700: train loss 2.2132, val loss 2.2232\n",
+            "step 800: train loss 2.1697, val loss 2.2014\n",
+            "step 900: train loss 2.1329, val loss 2.1651\n",
+            "step 1000: train loss 2.0987, val loss 2.1377\n",
+            "step 1100: train loss 2.0795, val loss 2.1252\n",
+            "step 1200: train loss 2.0419, val loss 2.0849\n",
+            "step 1300: train loss 2.0228, val loss 2.0677\n",
+            "step 1400: train loss 1.9882, val loss 2.0452\n",
+            "step 1500: train loss 1.9530, val loss 2.0232\n",
+            "step 1600: train loss 1.9401, val loss 2.0207\n",
+            "step 1700: train loss 1.9229, val loss 2.0074\n",
+            "step 1800: train loss 1.9117, val loss 2.0111\n",
+            "step 1900: train loss 1.8835, val loss 1.9733\n",
+            "step 2000: train loss 1.8744, val loss 1.9854\n",
+            "step 2100: train loss 1.8545, val loss 1.9593\n",
+            "step 2200: train loss 1.8545, val loss 1.9567\n",
+            "step 2300: train loss 1.8226, val loss 1.9357\n",
+            "step 2400: train loss 1.8232, val loss 1.9342\n",
+            "step 2499: train loss 1.7915, val loss 1.9266\n"
           ]
         }
       ]
@@ -498,45 +498,79 @@
       ],
       "metadata": {
         "id": "yv8oOVAz3R_B",
-        "outputId": "7ea06426-89b4-4d7f-f166-6964770e6c30",
+        "outputId": "6ea8802a-3547-49e5-84ce-b422ffe1ec9f",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
             "\n",
-            "Mooooo horrinchhhcch raanath Ku aisen bobe toe.\n",
-            "Sagr-'t theatitans bar bthie uhqurth bthar dinthoate arice mout fostatu zokou \n",
-            "Youns-m'of in coing mit nditincueg ireens, hoin lat Hot duov te ande to poman'g trabe!\n",
-            " lhin dome u.\n",
-            "Hhuce courity:'tug haiss hiw yo nurin's normopete gods'sk:\n",
-            "tink, titthakeno Winso whut eiings touti fouris so nuhireds poou gour; thu the hinteruf ff sor; igre! muf thin maleount ffaf Prisd mo om.\n",
-            "WHKINLuk!\n",
-            "Kuind isa\n",
-            "ardsad this me sto fin couk ay andy iry tome fo mo vouck no tounke mary.\n",
-            "Tou 'not buthm so aten hin.\n",
-            "Wpour bethe thimreand shoun be hes th thutisod,.\n",
-            "Butuch fosomy sstuth sou.\n",
-            " moun sof thupeings.\n",
-            "Whuespues she oveve imd assce oros ifk ovet soie so urd histe feRil ass:\n",
-            "Whit CINGghatk nike, n idu he neesoxt atou thitheakes agh'scour\n",
-            "'ss m k o with selon mo dous flla nomur ipatrcessingsughild.\n",
-            "MLurd po ton'en'tun thity feo theoou tiund tho nof the sut pe iportheou suth than tthe silse, Bloel ke soun thy a thef bede wat hotiu, cout ir foru;\n",
-            "youkgeg oueres tan in bofo. fasit fet Hink che whin thoui hod ser thitano nom notay'u brutond.\n",
-            "Me, mess thinds sofee woriingin cou touh gre Whin ste ndichca noure goed hice nI irstha thein cou fas ind- an binketit blamenat mer fand eing biwimngiten hawe e wo I dinctod dot hid'ull hie\n",
-            "tham Tuul lalou! trameolircoust jou' f f toupthriu thhuf thing mastin nit ih stinge.\n",
-            "WPthrithth hout sove chuths beer sef o pvonbust thay take thit be sinn'th I thit e nu toum Thime te you thel!ie, ins ye you,\n",
-            "But row ulat we\n",
-            "erinst sisokesthouk pte-mer, sates souf for thouk vid scee Coun!t mouete pined sef aring stis mo en sacourse cok derk hiskn won thik.\n",
-            "L\n",
-            "'congdescoon rould. ar tith arit, gadtinght couf phit, hioass o'ung,'t these haw Helhern Wend tig fafl ith sup that heacruces citt, ofamk, liceoulk tand muak rite wincof fota sa I orat burs bliteerosevelw hig 'puo' foour sito the ain's ku ngou'tens seoury pu sous med! wonse tho tan dtus be of to, J shou pat ingtourkin shoun'edfgoun dme su me our hihen ke!\n",
-            "M\n",
-            "Mair\n"
+            "And they brid own, which yest madier,\n",
+            "More uperanthruans the alause: andt he usqurthert?\n",
+            "Fed lascanesswick, you, not to zonounenouns, toffing I condriend;\n",
+            "Whoue miree, bodcintlation, drovers, and Will.\n",
+            "\n",
+            "DUCHEWI OF ICH:\n",
+            "Thate here she couriby ature aids hiw year's nourn Boopenclands\n",
+            "Morthy world thake of in on her piicks eyer\n",
+            "For thou we his now pooctor his butter of thrupted so;\n",
+            "Anging muftenter alepon, for dear?\n",
+            "\n",
+            "KISCING HENRY E!\n",
+            "\n",
+            "HONb&st:\n",
+            "Sads beaces and this hence as ranny it-pramence you!\n",
+            "\n",
+            "JOLn:\n",
+            "To Pood, grivent 'What me?\n",
+            " so a and see-ennom by weath mrean?\n",
+            "\n",
+            "BUCKINIO:\n",
+            "Go no weep ower it under some sto-thas lord\n",
+            "I ias we lore at thou eyeded heavoven:\n",
+            "He passt to ousink over soie so upon sir!\n",
+            "Fespeakes: the go, agure them, wis deeder.\n",
+            "For mo more himbed with\n",
+            "For vince war kis wiffes low moder so las noothing,\n",
+            "These In ammildeminer, poor's in now this make I am it is\n",
+            "oftherningn eysuran wip.\n",
+            "\n",
+            "GLOUCE-BOREN OF DORK:\n",
+            "And, Berelike, of so hat the abacch\n",
+            "atch time wout if for Gly thee? our Therefore\n",
+            "To what I coret Henk; he when the cordook,\n",
+            "And take all nobly hoor, and men, meen thinks and endersingin in-vinchigh him a word,\n",
+            "Do caless and Edwance aInd my a canint and as incomen be keep,\n",
+            "To me atteringry ofing brom not own\n",
+            "aw-cepunce, if tha de't a for Howe\n",
+            "thamper lows op!' the of thee tre's\n",
+            "He fring throught?\n",
+            "\n",
+            "SCAREOLIO:\n",
+            "So nir is cappressletir Wend's a'd your murds be:\n",
+            "Hand of vone, the to them the bance hoble;\n",
+            "And the namty may'd fore you thelpie,\n",
+            "And yeed thes arrow old toe\n",
+            "epingm sin just wuke them wars, eves;\n",
+            "Rich, thouke--I scann:\n",
+            "O there, And wherefore\n",
+            "Op ristile bres wach preicy him kLet in well there?\n",
+            "'Twis may man word. Pantler as I was thather\n",
+            "Marmphir, byoans o' no, hithese haw an\n",
+            "her of no hig wifle,\n",
+            "But with I heapry, incild, of monguer.\n",
+            "\n",
+            "GLOUCENTES:\n",
+            "Freper's befaint, say of at but the peepoor: like he punint\n",
+            "What is a for would then of an a would prour,\n",
+            "They aw-nsent, Jow hath and of a\n",
+            "one sto woak's it brif and whom for atheer,\n",
+            "Ame offer henwing, and I\n"
           ]
         }
       ]
